tests/fixtures/LatestTests/BinaryOperationLiteralTests/errors/bool_and_char_eq.fg
/; EXPECT_ERROR: InvalidBinaryOperationWithTypes
print(true == 'a')

